Opprydding (#400)
* 1866 fjerner ubrukte apier

* 1866 fjerner kafkalyttere og databaseoppsett
