# src/main/kotlin/no/nav/tiltakspenger/tiltak/gjennomforing/tiltakstype/db/Tiltakskode.kt
@@ -1,48 +1,0 @@
-package no.nav.tiltakspenger.tiltak.gjennomforing.tiltakstype.db
-
-import no.nav.tiltakspenger.libs.tiltak.TiltakResponsDTO
-
-enum class Tiltakskode {
-    ARBEIDSFORBEREDENDE_TRENING,
-    ARBEIDSRETTET_REHABILITERING,
-    AVKLARING,
-    DIGITALT_OPPFOLGINGSTILTAK,
-    GRUPPE_ARBEIDSMARKEDSOPPLAERING,
-    GRUPPE_FAG_OG_YRKESOPPLAERING,
-    JOBBKLUBB,
-    OPPFOLGING,
-    VARIG_TILRETTELAGT_ARBEID_SKJERMET,
-    HOYERE_UTDANNING,
-    ENKELTPLASS_ARBEIDSMARKEDSOPPLAERING,
-    ENKELTPLASS_FAG_OG_YRKESOPPLAERING,
-    ARBEIDSMARKEDSOPPLAERING,
-    NORSKOPPLAERING_GRUNNLEGGENDE_FERDIGHETER_FOV,
-    STUDIESPESIALISERING,
-    FAG_OG_YRKESOPPLAERING,
-    HOYERE_YRKESFAGLIG_UTDANNING,
-    ;
-
-    fun toArenaKode() = when (this) {
-        ARBEIDSFORBEREDENDE_TRENING -> TiltakResponsDTO.TiltakType.ARBFORB
-        ARBEIDSRETTET_REHABILITERING -> TiltakResponsDTO.TiltakType.ARBRRHDAG
-        AVKLARING -> TiltakResponsDTO.TiltakType.AVKLARAG
-        DIGITALT_OPPFOLGINGSTILTAK -> TiltakResponsDTO.TiltakType.DIGIOPPARB
-        GRUPPE_ARBEIDSMARKEDSOPPLAERING,
-        ARBEIDSMARKEDSOPPLAERING,
-        NORSKOPPLAERING_GRUNNLEGGENDE_FERDIGHETER_FOV,
-        STUDIESPESIALISERING,
-        -> TiltakResponsDTO.TiltakType.GRUPPEAMO
-
-        GRUPPE_FAG_OG_YRKESOPPLAERING,
-        FAG_OG_YRKESOPPLAERING,
-        HOYERE_YRKESFAGLIG_UTDANNING,
-        -> TiltakResponsDTO.TiltakType.GRUFAGYRKE
-
-        JOBBKLUBB -> TiltakResponsDTO.TiltakType.JOBBK
-        OPPFOLGING -> TiltakResponsDTO.TiltakType.INDOPPFAG
-        VARIG_TILRETTELAGT_ARBEID_SKJERMET -> TiltakResponsDTO.TiltakType.VASV
-        ENKELTPLASS_ARBEIDSMARKEDSOPPLAERING -> TiltakResponsDTO.TiltakType.ENKELAMO
-        ENKELTPLASS_FAG_OG_YRKESOPPLAERING -> TiltakResponsDTO.TiltakType.ENKFAGYRKE
-        HOYERE_UTDANNING -> TiltakResponsDTO.TiltakType.HOYEREUTD
-    }
-}
