# src/main/resources/openapi/documentation.yaml
@@ -36,32 +36,6 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/TestDeltakelseFeilmelding"
-  /azure/tiltak:
-    post:
-      description: "Hente tiltaksdeltakelser for systembruker"
-      tags:
-        - Tiltaksdeltakelser
-      parameters:
-        - name: "Nav-Call-Id"
-          in: "header"
-          required: false
-          schema:
-            type: "string"
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/HentTiltaksdeltakelserRequest"
-        required: true
-      responses:
-        "200":
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                type: "array"
-                items:
-                  $ref: "#/components/schemas/TiltakTilSaksbehandlingDTO"
   /azure/tiltakshistorikk:
     post:
       description: "Hente tiltaksdeltakelser for systembruker fra tiltakshistorikk-api"
@@ -88,20 +62,6 @@ paths:
                 type: "array"
                 items:
                   $ref: "#/components/schemas/TiltakshistorikkDTO"
-  /tokenx/tiltak:
-    get:
-      description: "Hente tiltaksdeltakelser for innlogget bruker"
-      tags:
-        - Tiltaksdeltakelser
-      responses:
-        "200":
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                type: "array"
-                items:
-                  $ref: "#/components/schemas/TiltakDTO"
   /tokenx/tiltakshistorikk:
     get:
       description: "Hente tiltaksdeltakelser for innlogget bruker"
@@ -131,165 +91,6 @@ components:
       properties:
         feilmelding:
           type: "string"
-    TiltakTilSaksbehandlingDTO:
-      type: "object"
-      properties:
-        id:
-          type: "string"
-        gjennomføringId:
-          type: "string"
-        deltakelseFom:
-          type: "string"
-          format: "date"
-        deltakelseTom:
-          type: "string"
-          format: "date"
-        typeNavn:
-          type: "string"
-        typeKode:
-          type: "string"
-          enum:
-          - "ARBTREN"
-          - "GRUPPEAMO"
-          - "ENKELAMO"
-          - "GRUFAGYRKE"
-          - "ENKFAGYRKE"
-          - "HOYEREUTD"
-          - "ARBFORB"
-          - "UTVAOONAV"
-          - "FORSAMOGRU"
-          - "FORSAMOENK"
-          - "FORSFAGGRU"
-          - "FORSFAGENK"
-          - "FORSHOYUTD"
-          - "FORSOPPLEV"
-          - "AVKLARAG"
-          - "ARBRRHDAG"
-          - "JOBBK"
-          - "INDOPPFAG"
-          - "INDJOBSTOT"
-          - "DIGIOPPARB"
-          - "UTVOPPFOPL"
-          - "IPSUNG"
-          - "REFINO"
-          - "MIDLONTIL"
-          - "VARLONTIL"
-          - "TILSJOBB"
-          - "ETAB"
-          - "VASV"
-          - "VATIAROR"
-          - "FUNKSJASS"
-          - "INKLUTILS"
-          - "EKSPEBIST"
-          - "MENTOR"
-          - "AMBF1"
-          - "KURS"
-          - "ANNUTDANN"
-          - "ABOPPF"
-          - "ABUOPPF"
-          - "ABIST"
-          - "ABTBOPPF"
-          - "AMO"
-          - "AMOE"
-          - "AMOB"
-          - "AMOY"
-          - "PRAKSORD"
-          - "PRAKSKJERM"
-          - "ARBRRHBAG"
-          - "ARBRRHBSM"
-          - "ARBRDAGSM"
-          - "ARBRRDOGN"
-          - "ARBDOGNSM"
-          - "ASV"
-          - "ATG"
-          - "AVKLARUS"
-          - "AVKLARSP"
-          - "AVKLARKV"
-          - "AVKLARSV"
-          - "BIA"
-          - "BREVKURS"
-          - "DIVTILT"
-          - "FLEKSJOBB"
-          - "TILRTILSK"
-          - "KAT"
-          - "VALS"
-          - "GRUNNSKOLE"
-          - "HOYSKOLE"
-          - "INDOPPFOLG"
-          - "ITGRTILS"
-          - "JOBBKLUBB"
-          - "JOBBFOKUS"
-          - "JOBBBONUS"
-          - "JOBBSKAP"
-          - "AMBF2"
-          - "STATLAERL"
-          - "LONNTILS"
-          - "REAKTUFOR"
-          - "LONNTILL"
-          - "NETTAMO"
-          - "NETTKURS"
-          - "INST_S"
-          - "INDOPPFSP"
-          - "SYSSLANG"
-          - "YHEMMOFF"
-          - "SYSSOFF"
-          - "LONNTIL"
-          - "TIDSUBLONN"
-          - "AMBF3"
-          - "TILRETTEL"
-          - "TILPERBED"
-          - "PV"
-          - "SPA"
-          - "UFØREPENLØ"
-          - "UTDYRK"
-          - "UTDPERMVIK"
-          - "VIKARBLED"
-          - "UTBHLETTPS"
-          - "UTBHPSLD"
-          - "UTBHSAMLI"
-          - "VV"
-          - "VIDRSKOLE"
-          - "OPPLT2AAR"
-          - "LONNTILAAP"
-          - "BIO"
-          - "TESTING"
-          - "NYTEST"
-          - "INDOPPRF"
-          - "SUPPEMP"
-        deltakelseStatus:
-          type: "string"
-          enum:
-          - "VENTER_PA_OPPSTART"
-          - "DELTAR"
-          - "HAR_SLUTTET"
-          - "AVBRUTT"
-          - "FULLFORT"
-          - "IKKE_AKTUELL"
-          - "FEILREGISTRERT"
-          - "PABEGYNT_REGISTRERING"
-          - "SOKT_INN"
-          - "VENTELISTE"
-          - "VURDERES"
-        deltakelsePerUke:
-          type: "number"
-          format: "float"
-          minimum: 1
-          maximum: 5
-          default: 5
-        deltakelseProsent:
-          type: "number"
-          format: "float"
-          minimum: 1
-          maximum: 100
-          default: 100
-        kilde:
-          type: "string"
-      required:
-      - "id"
-      - "typeNavn"
-      - "typeKode"
-      - "deltakelseStatus"
-      - "kilde"
     TiltakshistorikkDTO:
       type: "object"
       properties:
@@ -588,180 +389,6 @@ components:
       - "deltakerliste"
       - "status"
       - "sistEndret"
-    GjennomføringDTO:
-      type: "object"
-      properties:
-        id:
-          type: "string"
-        arrangørnavn:
-          type: "string"
-        typeNavn:
-          type: "string"
-        arenaKode:
-          type: "string"
-          enum:
-          - "ARBTREN"
-          - "GRUPPEAMO"
-          - "ENKELAMO"
-          - "GRUFAGYRKE"
-          - "ENKFAGYRKE"
-          - "HOYEREUTD"
-          - "ARBFORB"
-          - "UTVAOONAV"
-          - "FORSAMOGRU"
-          - "FORSAMOENK"
-          - "FORSFAGGRU"
-          - "FORSFAGENK"
-          - "FORSHOYUTD"
-          - "FORSOPPLEV"
-          - "AVKLARAG"
-          - "ARBRRHDAG"
-          - "JOBBK"
-          - "INDOPPFAG"
-          - "INDJOBSTOT"
-          - "DIGIOPPARB"
-          - "UTVOPPFOPL"
-          - "IPSUNG"
-          - "REFINO"
-          - "MIDLONTIL"
-          - "VARLONTIL"
-          - "TILSJOBB"
-          - "ETAB"
-          - "VASV"
-          - "VATIAROR"
-          - "FUNKSJASS"
-          - "INKLUTILS"
-          - "EKSPEBIST"
-          - "MENTOR"
-          - "AMBF1"
-          - "KURS"
-          - "ANNUTDANN"
-          - "ABOPPF"
-          - "ABUOPPF"
-          - "ABIST"
-          - "ABTBOPPF"
-          - "AMO"
-          - "AMOE"
-          - "AMOB"
-          - "AMOY"
-          - "PRAKSORD"
-          - "PRAKSKJERM"
-          - "ARBRRHBAG"
-          - "ARBRRHBSM"
-          - "ARBRDAGSM"
-          - "ARBRRDOGN"
-          - "ARBDOGNSM"
-          - "ASV"
-          - "ATG"
-          - "AVKLARUS"
-          - "AVKLARSP"
-          - "AVKLARKV"
-          - "AVKLARSV"
-          - "BIA"
-          - "BREVKURS"
-          - "DIVTILT"
-          - "FLEKSJOBB"
-          - "TILRTILSK"
-          - "KAT"
-          - "VALS"
-          - "GRUNNSKOLE"
-          - "HOYSKOLE"
-          - "INDOPPFOLG"
-          - "ITGRTILS"
-          - "JOBBKLUBB"
-          - "JOBBFOKUS"
-          - "JOBBBONUS"
-          - "JOBBSKAP"
-          - "AMBF2"
-          - "STATLAERL"
-          - "LONNTILS"
-          - "REAKTUFOR"
-          - "LONNTILL"
-          - "NETTAMO"
-          - "NETTKURS"
-          - "INST_S"
-          - "INDOPPFSP"
-          - "SYSSLANG"
-          - "YHEMMOFF"
-          - "SYSSOFF"
-          - "LONNTIL"
-          - "TIDSUBLONN"
-          - "AMBF3"
-          - "TILRETTEL"
-          - "TILPERBED"
-          - "PV"
-          - "SPA"
-          - "UFØREPENLØ"
-          - "UTDYRK"
-          - "UTDPERMVIK"
-          - "VIKARBLED"
-          - "UTBHLETTPS"
-          - "UTBHPSLD"
-          - "UTBHSAMLI"
-          - "VV"
-          - "VIDRSKOLE"
-          - "OPPLT2AAR"
-          - "LONNTILAAP"
-          - "BIO"
-          - "TESTING"
-          - "NYTEST"
-          - "INDOPPRF"
-          - "SUPPEMP"
-      required:
-      - "id"
-      - "arrangørnavn"
-      - "typeNavn"
-      - "arenaKode"
-    TiltakDTO:
-      type: "object"
-      properties:
-        id:
-          type: "string"
-        gjennomforing:
-          $ref: "#/components/schemas/GjennomføringDTO"
-        deltakelseFom:
-          type: "string"
-          format: "date"
-        deltakelseTom:
-          type: "string"
-          format: "date"
-        deltakelseStatus:
-          type: "string"
-          enum:
-          - "VENTER_PA_OPPSTART"
-          - "DELTAR"
-          - "HAR_SLUTTET"
-          - "AVBRUTT"
-          - "FULLFORT"
-          - "IKKE_AKTUELL"
-          - "FEILREGISTRERT"
-          - "PABEGYNT_REGISTRERING"
-          - "SOKT_INN"
-          - "VENTELISTE"
-          - "VURDERES"
-        deltakelseDagerUke:
-          type: "number"
-          format: "float"
-          minimum: 1
-          maximum: 5
-          default: 5
-        deltakelseProsent:
-          type: "number"
-          format: "float"
-          minimum: 1
-          maximum: 100
-          default: 100
-        kilde:
-          type: "string"
-        registrertDato:
-          type: "string"
-          format: "date-time"
-      required:
-      - "id"
-      - "gjennomforing"
-      - "deltakelseStatus"
-      - "kilde"
-      - "registrertDato"
 
   securitySchemes:
     azureAd:
